[gd_scene load_steps=6 format=3 uid="uid://50tod2hsjvde"]

[ext_resource type="Script" path="res://scripts/rts_resource_wood.gd" id="1_ca76u"]
[ext_resource type="Texture2D" uid="uid://i31scrgufbm7" path="res://art/craftland/48x48/tree.png" id="1_hcpj2"]
[ext_resource type="Texture2D" uid="uid://xkaxfaolwau4" path="res://art/craftland/48x48/damaged-tree.png" id="3_v81b4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8o2w2"]
size = Vector2(64, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h42q0"]
size = Vector2(40.5, 64.5)

[node name="RTS_Resource_Wood" type="Node2D"]
script = ExtResource("1_ca76u")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(32, -49)
texture = ExtResource("1_hcpj2")

[node name="DamagedSprite" type="Sprite2D" parent="."]
position = Vector2(30, 4)
texture = ExtResource("3_v81b4")

[node name="GatherPos" type="Node2D" parent="."]
position = Vector2(57, 13)
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(30, -45)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="DefaultCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8o2w2")

[node name="DamagedCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 50.25)
shape = SubResource("RectangleShape2D_h42q0")
disabled = true

[node name="DamagedTimer" type="Timer" parent="."]

[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
